# AuraCap

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  USERGUIDE.md  docker-compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: ingest_dispatch.yml  scheduler_tick.yml  setup_release_inbox.yml  tests.yml
backend/: Dockerfile  main.py
backend/app/: main.py
docs/: GITHUB_RELEASE_INBOX.md  STORAGE_MIGRATION.md  SYNC_CHANNELS.md  TEMP_STORAGE.md  TESTING_GITHUB_APP.md  USERGUIDE.md
prompts/: customized_prompts.md  insights_en.md  insights_prompts.md  summary_en.md  summary_prompts.md  summary_zh.md  tagging_en.md  tagging_prompts.md  tagging_zh.md  timeline_audio_en.md  timeline_audio_zh.md  timeline_prompts.md  timeline_screenshot_en.md  timeline_screenshot_zh.md
scripts/: build_shortcuts.py  ensure_release_inbox.py  process_github_dispatch.py  run_scheduler_tick.py
shortcuts/: README.md
shortcuts/templates/: AuraCap_Capture.shortcut  AuraCap_Voice.plist
storage/: .scheduler_state.json  entry_tags.json  timeline.md
storage/insights/: 2026-02-26.md  2026-02-27.md  2026-02-28.md  2026-03-01.md  2026-03-02.md
storage/summary/: 2026-02-21_2026-02-27.md  2026-02-22_2026-02-28.md  2026-02-23_2026-03-01.md  2026-02-24_2026-03-02.md  2026-02-25_2026-03-03.md  2026-02-26_2026-03-04.md  2026-02-27_2026-03-05.md  2026-02-28_2026-03-06.md  2026-03-01_2026-03-07.md  2026-03-02_2026-03-08.md
tests/: test_capture_raw.py  test_github_dispatch_security.py  test_media.py  test_scheduler.py  test_timeline.py
(+64 files in other folders)
